deployment/ngx-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ngx
  name: ngx-dep
  namespace: learn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ngx
  strategy: {}
  template:
    metadata:
      labels:
        app: ngx
    spec:
      volumes: 
        - name: ngx-conf-vol 
          configMap: 
            name: ngx-conf    
      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts: 
        - mountPath: /etc/nginx/conf.d 
          name: ngx-conf-vol
